# ai-research-agent

./: .gitignore  pyproject.toml
graph/: build_graph.py  state.py
graph/nodes/: __init__.py  citation_node.py  discovery_node.py  methodology_node.py  reviewer_node.py  writing_node.py
llm/: client.py
prompts/: templates.py
rag/: faiss_index.py
tools/: citation_tools.py  pdf_tools.py  retrieval_tools.py  search_tools.py
